# mydefaults

./: README.md  makefile  pyproject.toml  vinc.json
mydefaults/: __init__.py  argparse.py  decorators.py
