[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "LICENSE.txt",
    "pyproject.toml",
    "mydefaults"
]

[project]
name = "mydefaults"
version = "1.1.1" # version
authors = [
    { name = "Guenthner", email = "guenthner.jonathan@gmail.com" },
]
description = "Boilerplate I use in my projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["colorama"]
keywords = []